--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,8 @@
         "psr-4": {
             "DannyXCII\\Router\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0"
     }
 }
