--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
             "DannyXCII\\Router\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "require-dev": {
         "phpunit/phpunit": "^10.0"
     }
