--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "dannyxcii/router",
+    "version": "0.1.0",
     "autoload":{
         "psr-4": {
             "DannyXCII\\Router\\": "src/"
