--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "dannyxcii/router",
+    "description": "A simple PHP router.",
     "version": "0.1.0",
     "license": "MIT",
     "autoload":{
